--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "Benevolent"
     ],
     "require": {
-        "illuminate/support": "^8.0"
+        "illuminate/support": "^8.0",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
