--- a/composer.json
+++ b/composer.json
@@ -1,47 +1,50 @@
 {
-    "name": "elzdave/benevolent",
-    "description": "A custom user provider for Laravel",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "David Eleazar",
-            "email": "smartways897@gmail.com"
-        }
-    ],
-    "homepage": "https://github.com/elzdave/benevolent",
-    "keywords": [
-        "Laravel",
-        "Benevolent"
-    ],
-    "require": {
-        "illuminate/support": "^8.0",
-        "guzzlehttp/guzzle": "^7.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~9.0",
-        "orchestra/testbench": "^6.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Elzdave\\Benevolent\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Elzdave\\Benevolent\\Tests\\": "tests"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Elzdave\\Benevolent\\BenevolentServiceProvider"
-            ],
-            "aliases": {
-                "Benevolent": "Elzdave\\Benevolent\\Facades\\Benevolent"
-            }
-        }
-    },
-    "scripts": {
-        "test": "vendor/bin/phpunit"
+  "name": "elzdave/benevolent",
+  "description": "A custom user provider to authenticate users to REST API within Laravel framework.",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "David Eleazar",
+      "email": "smartways897@gmail.com"
     }
+  ],
+  "homepage": "https://github.com/elzdave/benevolent",
+  "keywords": [
+    "Laravel",
+    "Benevolent",
+    "User Provider",
+    "Authentication",
+    "REST API"
+  ],
+  "require": {
+    "illuminate/support": "^8.0",
+    "guzzlehttp/guzzle": "^7.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~9.0",
+    "orchestra/testbench": "^6.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Elzdave\\Benevolent\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Elzdave\\Benevolent\\Tests\\": "tests"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Elzdave\\Benevolent\\BenevolentServiceProvider"
+      ],
+      "aliases": {
+        "Benevolent": "Elzdave\\Benevolent\\Facades\\Benevolent"
+      }
+    }
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
+  }
 }
