--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~9.0",
-    "orchestra/testbench": "^6.0"
+    "orchestra/testbench": "^6.0",
+    "nunomaduro/collision": "^5.10"
   },
   "autoload": {
     "psr-4": {
@@ -45,6 +46,6 @@
     }
   },
   "scripts": {
-    "test": "vendor/bin/phpunit"
+    "test": "vendor/bin/testbench package:test"
   }
 }
