--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   "require-dev": {
     "phpunit/phpunit": "~9.0",
     "orchestra/testbench": "^6.0",
-    "nunomaduro/collision": "^5.10"
+    "nunomaduro/collision": "^5.10",
+    "roave/no-leaks": "^1.3"
   },
   "autoload": {
     "psr-4": {
